Prevent content overflow

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 	font-family: sans-serif;
 	font-size: 12pt;
 	margin: 0;
+	overflow: hidden;
 }
 .site {
 	margin: 0 auto;
